syntax = "proto3";

option csharp_namespace = "Microservice.AuthService.Protos";

import "google/protobuf/timestamp.proto";

service ApiKey {

// api key
  rpc GetApiKey(ApiKeyRequest) returns (ApiKeyResponse);
  rpc CreateApiKey(CreateApiKeyRequest) returns (ApiHashResponse);
  rpc RegenerateApiKey(ApiKeyRequest) returns (ApiHashResponse);
  rpc RenewApiKey(RenewApiKeyRequest) returns (ApiKeyResponse);
  rpc RevokeApiKey(ApiKeyRequest) returns (ApiKeyResponse);

  // user info
  rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse);

  // active session
  rpc GetSessionList(SessionListRequest) returns (SessionListResponse);

  // session ckeck for suspicious detection
  rpc SessionListCheck(SessionCheckRequest) returns (SessionCheckResponce);

  // Session details
  rpc GetSessionDetails(SessionDetailsRequest) returns (SessionDetailsResponse);

}

// api key
message ApiKeyRequest {
  string user_id = 1;
}

message ApiKeyResponse {
  string user_id = 1;
  string org_name = 2;
  string domain = 3;
  string org_email = 4;
  string plan = 5;
  google.protobuf.Timestamp expiration_date = 6;
  google.protobuf.Timestamp created_at = 7;
  int32 request_limit = 8;
  google.protobuf.Timestamp reset_date = 9;
  bool is_revoked = 10;
  bool is_active = 11;
  string TanantId = 12;
}

message CreateApiKeyRequest {
  string user_id = 1;
  string org_name = 2;
  string domain = 3;
  string org_email = 4;
  string plan = 5;
  google.protobuf.Timestamp expiration_date = 6;
  google.protobuf.Timestamp created_at = 7;
  int32 request_limit = 8;
}

message ApiHashResponse {
  string api_hash = 1;
  string TanantId = 2;
}

message RenewApiKeyRequest {
	string user_id = 1;
	string plan = 2;
	int32 request_limit = 3;
	google.protobuf.Timestamp expiration_date = 4;
	bool is_revoked = 5;
}

// user info
message UserInfoRequest{
	string user_id = 1;
	string TenantId = 2;
}

message UserInfoResponse{
	string user_name = 1;
	string user_email = 2;
	string lastlogin = 3;
}

// active Session
message SessionListRequest {
  string TenantId = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  string device = 4;
  string country = 5;
}

message Session {
	string UserName =1;
	string UserId =2;
	string Email = 3;
	string IpAddress = 4;
	string City = 5;
	string Country = 6;
	string Status = 7;
	string DeviceType = 8;
	google.protobuf.Timestamp LoginTime = 9;
	string Lac = 10;
	string Sessionid = 11;
}

message SessionListResponse {
  repeated Session sessions = 1;
}

// session check for suspicious detection
message SessionCheck {
	string IpAddress = 1;
	string Country = 2;
	string Fingerprint = 3;
	google.protobuf.Timestamp LocalTime = 4;
	bool isVPN = 5;
	string lat_lon = 6;
	google.protobuf.Timestamp LoginTime = 7;
	google.protobuf.Timestamp LogoutTime = 8;
}

message SessionCheckRequest {
	string TenantId = 1;
	string user_id = 2;
	string SessionId = 3;
	int32 v = 4;
}

message SessionCheckResponce {
	repeated SessionCheck sessionlist = 1;
}

// Session details
message SessionDetailsRequest {
	string TenantId = 1;
	string SessionId = 2;
}

message SessionDetailsResponse {
	SessionCheck session = 1;
	google.protobuf.Timestamp created_at = 2;
	google.protobuf.Timestamp updated_at = 3;
	string user_id = 4;
	string user_name = 5;
	string user_email = 6;
	string device_os = 7;
	string device_type = 8;
	string ip_address = 9;
	string city = 10;
	string country = 11;
	string region = 12;
}